src/addons/kube-ingress-nginx/1.9.5/ingress-ssl.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: ${INGRESS_API_NAME}
  namespace: ${NAMESPACE}
  annotations:
    nginx.ingress.kubernetes.io/rewrite-target: /$1
    nginx.ingress.kubernetes.io/proxy-body-size: "200m"
    nginx.ingress.kubernetes.io/proxy-connect-timeout: "6000"
    nginx.ingress.kubernetes.io/proxy-send-timeout: "6000"
    nginx.ingress.kubernetes.io/proxy-read-timeout: "6000"
spec:
  ingressClassName: nginx
  tls:
  - hosts:
    - ${INGRESS_API_HOST}
    secretName: ${INGRESS_SECRET}
  rules:
  - host: ${INGRESS_API_HOST}
    http:
      paths:
      - path: /(.*)
        pathType: Prefix
        backend:
          service:
            name: ${INGRESS_SVC_NAME}
            port:
              number: ${INGRESS_SVC_PORT}
